files modified successfully

--- a/login.html
+++ b/login.html
@@ -7,8 +7,9 @@ welcome to the new era
     <title>ONEPIECE</title>
 </head>
 <body>
-    what to do
+    
    EDITED 
-   successfully
+   successfully added
+   end
 </body>
 </html>
